Whitespace fixes
I prefer tabs to spaces and use spaces after colons in css.

--- a/app/public/my.css
+++ b/app/public/my.css
@@ -1,6 +1,6 @@
 .title {
-	display:table;
-	margin:auto;
-	color:#49ADD9;
-	margin-top:7em;
+  display: table;
+  margin: auto;
+  color: #49ADD9;
+  margin-top: 5em;
 }
